fix layout shift

--- a/src/components/Article/article.css
+++ b/src/components/Article/article.css
@@ -34,6 +34,11 @@
 .title {
   margin-top: 30px;
   font-size: 2rem;
+
+  @media screen and (max-width: 812px) {
+    font-size: 1.8rem;
+    height: 140px;
+  }
 }
 
 .content {
